FIX card border-bottom when collapsed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,11 @@ aside li:hover i {
   transition: 0.2s ease-in-out;
 }
 
+/* IF UNSUPPORTED WILL JUST NOT APPLY */
+#main_content .card-header:has(a[aria-expanded="false"]) {
+  border-bottom: 0;
+}
+
 #app_footer {
   font-size: 0.875rem;
   color: white;
